<?xml version="1.0"?>
<package format="2">
  <name>lidar_description</name>
  <version>1.0.8</version>
  <description>
    URDF and meshes describing LiDAR laser scanners.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
